src/objects/InvoiceDates__c.object
<CustomObject>
    <description>Dates to generate invoices.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Hours__c</fullName>
        <formula>(CASE(MOD( Start_Date__c - DATE(1985,6,24),7),0,CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),1 ,CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999)+(FLOOR(( End_Date__c - Start_Date__c )/7)*5))*8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>InvoiceDate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>InvoiceDate No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvoiceDates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>